# wrench-voice

./: .gitignore  LICENSE  README.md  pyproject.toml
kb/: bmw-m54.md  chevy-small-block-v8.md  ford-300-i6.md  honda-b-series.md  honda-d-series.md  honda-f-series.md  honda-h-series.md  honda-j-series.md  honda-k-series.md  honda-r-series.md  jeep-4-0-i6.md  mazda-rotary-13b.md  nissan-ka24de.md  subaru-ej25-sohc.md  subaru-fa20.md  toyota-1mz-fe.md  toyota-1uz-2uz.md  toyota-1zz-2zz.md  toyota-22re.md  toyota-2gr-fe.md  toyota-2jz.md  toyota-2tr-fe.md  toyota-3s-gte.md  toyota-5vz-fe.md  toyota-7m.md
references/: engine-family-matrix.md
scripts/: demo_repair_assistant.py
src/wrench_voice/: __init__.py  audio_effects.py  auto_order.py  barcode_scanner.py  calendar_stub.py  carfax_stub.py  cli.py  cost_analyzer.py  customer_notifier.py  delivery_predictor.py  diagnostic_engine.py  digital_inspection.py  inventory_manager.py  job_scheduler.py  kb.py  microphone_input.py  obd_bridge.py  ollama_bridge.py  part_scorer.py  parts_finder.py  parts_planner.py  photo_hint_manager.py  price_tracker.py  quickbooks_sync.py  repair_workflow.py  sms_billing.py  vehicle_history.py  vehicle_specs_db.py  voice_gateway.py  warranty_tracker.py  workflow_predictor.py
tests/: conftest.py  test_audio_hardware.py  test_diagnostic_engine.py  test_kb.py  test_obd_bridge.py  test_ollama_bridge.py  test_parts_finder.py  test_parts_planner.py  test_photo_hint_manager.py  test_repair_workflow.py  test_shop_modules.py
